Fix white space in cells

--- a/src/style/tabling/index.scss
+++ b/src/style/tabling/index.scss
@@ -173,7 +173,7 @@
           display: flex;
           flex-direction: column;
           justify-content: center;
-          white-space: nowrap;
+          // white-space: nowrap;
         }
 
         .ag-selection-checkbox {
